--- a/transcriber/src/Keyboard.css
+++ b/transcriber/src/Keyboard.css
@@ -8,7 +8,7 @@ body {
   position: fixed;
   top: calc(var(--vh, 1vh) * 60);
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: calc(var(--vh, 1vh) * 40);
   font-size: calc(var(--vh, 1vh) * 4);
   background-color: white;
